# codezh

./: CODE_OF_CONDUCT.md  LICENSE  README.md
.github/: README.md
.github/workflows/: ci.yml
clients/: README.md
clients/desktop/: README.md
clients/mobile/: README.md
clients/web/: README.md
core-crypto/: Cargo.toml  README.md
core-crypto/src/: lib.rs
docs/: README.md  architecture.md
protocol/: README.md
protocol/rfcs/: rfc-0001.md
scripts/: README.md  format.sh  setup_dev.sh
server/: Cargo.toml  README.md
server/src/: main.rs
